adjusting augmentation for mask3d training

--- a/thaumato-anakalyptor/ThaumatoAnakalyptor/mask3d/conf/augmentation/volumentations_aug.yaml
+++ b/thaumato-anakalyptor/ThaumatoAnakalyptor/mask3d/conf/augmentation/volumentations_aug.yaml
@@ -21,33 +21,40 @@ transform:
           - 0.1
         - - -0.1
           - 0.1
-    # - __class_fullname__: volumentations.augmentations.transforms.RotateAroundAxis3d
-    #   always_apply: true
-    #   axis:
-    #     - 0
-    #     - 0
-    #     - 1
-    #   p: 0.25
-    #   rotation_limit:
-    #     - -3.141592653589793
-    #     - 3.141592653589793
-    # - __class_fullname__: volumentations.augmentations.transforms.RotateAroundAxis3d
-    #   always_apply: true
-    #   axis:
-    #     - 0
-    #     - 1
-    #     - 0
-    #   p: 0.25
-    #   rotation_limit:
-    #     - -3.141592653589793
-    #     - 3.141592653589793
-    # - __class_fullname__: volumentations.augmentations.transforms.RotateAroundAxis3d
-    #   always_apply: true
-    #   axis:
-    #     - 1
-    #     - 0
-    #     - 0
-    #   p: 0.25
-    #   rotation_limit:
-    #     - -3.141592653589793
-    #     - 3.141592653589793
+    - __class_fullname__: volumentations.augmentations.transforms.Flip3d
+      always_apply: false
+      p: 0.5
+      axis:
+        - 0  # Flips along the x-axis
+        - 1  # Flips along the y-axis
+        - 2  # Flips along the z-axis
+    - __class_fullname__: volumentations.augmentations.transforms.RotateAroundAxis3d
+      always_apply: true
+      axis:
+        - 0
+        - 0
+        - 1
+      p: 0.10
+      rotation_limit:
+        - -3.141592653589793
+        - 3.141592653589793
+    - __class_fullname__: volumentations.augmentations.transforms.RotateAroundAxis3d
+      always_apply: true
+      axis:
+        - 0
+        - 1
+        - 0
+      p: 0.10
+      rotation_limit:
+        - -3.141592653589793
+        - 3.141592653589793
+    - __class_fullname__: volumentations.augmentations.transforms.RotateAroundAxis3d
+      always_apply: true
+      axis:
+        - 1
+        - 0
+        - 0
+      p: 0.10
+      rotation_limit:
+        - -3.141592653589793
+        - 3.141592653589793
