git adjust graph loading

--- a/thaumato-anakalyptor/ThaumatoAnakalyptor/graph_problem/CMakeLists.txt
+++ b/thaumato-anakalyptor/ThaumatoAnakalyptor/graph_problem/CMakeLists.txt
@@ -101,7 +101,7 @@ link_directories(${Python_LIBRARY_DIRS})
 add_subdirectory(pybind11)  # Ensure pybind11 is added to the project
 
 # Add a Python module with pybind11
-pybind11_add_module(graph_problem_gpu_py main_py.cpp solve_gpu.cu node_structs.cpp)
+pybind11_add_module(graph_problem_gpu_py main_py.cpp solve_gpu.cu mst_union.cpp node_structs.cpp)
 
 # Include directories for Python module
 target_include_directories(graph_problem_gpu_py PRIVATE ${CMAKE_SOURCE_DIR})
