bugfix, h5 thread safety

--- a/thaumato-anakalyptor/ThaumatoAnakalyptor/sheet_generation/CMakeLists.txt
+++ b/thaumato-anakalyptor/ThaumatoAnakalyptor/sheet_generation/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.5)
 project(sheet_generation)
 
-# Set build type, C++ standard, and optimization flags.
+# Set the build type if not already set
+# set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
@@ -12,7 +13,7 @@ find_package(PythonLibs REQUIRED)
 include_directories(${PYTHON_INCLUDE_DIRS})
 link_directories(${PYTHON_LIBRARIES})
 
-# Add subdirectories for dependencies.
+# Add subdirectories for dependencies
 add_subdirectory(pybind11)
 add_subdirectory(yaml-cpp)
 add_subdirectory(hdbscan)
@@ -24,18 +25,15 @@ find_package(TBB REQUIRED)
 find_package(OpenMP REQUIRED)
 
 # ---------------------------
-# Fetch and build HDF5 (version 1.12.2) with thread safety enabled.
+# Fetch and build HDF5 (version 1.12.2) with thread safety enabled
+# and disable the unsupported C++ API.
 # ---------------------------
 include(FetchContent)
-
-# Override unsupported option checks.
-set(ALLOW_UNSUPPORTED ON CACHE BOOL "Allow unsupported options")
-
 FetchContent_Declare(
   hdf5
   URL https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-1.12/hdf5-1.12.2/src/hdf5-1.12.2.tar.gz
 )
-# Set options for a thread-safe build.
+# Set options for a thread-safe build
 set(HDF5_ENABLE_THREADSAFE ON CACHE BOOL "Enable HDF5 thread safety")
 set(HDF5_USE_FILE_LOCKING FALSE CACHE BOOL "Disable HDF5 file locking")
 set(HDF5_BUILD_HL OFF CACHE BOOL "Disable HDF5 HL API")
@@ -43,20 +41,12 @@ set(HDF5_BUILD_CPP_LIB OFF CACHE BOOL "Disable HDF5 C++ API")
 set(HDF5_BUILD_TOOLS OFF CACHE BOOL "Disable HDF5 tools")
 set(HDF5_BUILD_EXAMPLES OFF CACHE BOOL "Disable HDF5 examples")
 set(HDF5_BUILD_TESTING OFF CACHE BOOL "Disable HDF5 testing")
-# Specify an install prefix for HDF5.
+# Specify an install prefix for HDF5 so we know where the built library is installed.
 set(HDF5_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/hdf5_install CACHE PATH "HDF5 install prefix")
 
 FetchContent_MakeAvailable(hdf5)
 
-# ---------------------------
-# Add a custom target to install HDF5.
-# ---------------------------
-add_custom_target(hdf5_install
-  COMMAND ${CMAKE_COMMAND} --install ${hdf5_BINARY_DIR} --prefix ${HDF5_INSTALL_PREFIX}
-  COMMENT "Installing HDF5 to ${HDF5_INSTALL_PREFIX}"
-)
-
-# Create an imported target for HDF5 if one is not provided.
+# Create an imported target for HDF5 if one is not provided by the fetched project.
 if (NOT TARGET HDF5::HDF5)
   add_library(HDF5::HDF5 UNKNOWN IMPORTED)
   set_target_properties(HDF5::HDF5 PROPERTIES
@@ -65,7 +55,7 @@ if (NOT TARGET HDF5::HDF5)
 endif()
 
 # ---------------------------
-# Create pybind11 modules.
+# Create pybind11 modules
 # ---------------------------
 pybind11_add_module(sheet_generation solver.cpp)
 pybind11_add_module(pointcloud_processing pointcloud_processing.cpp)
@@ -91,8 +81,5 @@ target_link_libraries(meshing_utils PRIVATE
     OpenMP::OpenMP_CXX 
     ${PYTHON_LIBRARIES})
 
-# Define compile definitions so that the code and HDF5 headers know thread safety is enabled.
+# Define compile definitions so that our code and HDF5 headers know we use thread safety.
 target_compile_definitions(pointcloud_processing PRIVATE H5_HAVE_THREADSAFE HDF5_USE_FILE_LOCKING=FALSE)
-
-# Ensure that HDF5 is installed before building targets that depend on it.
-add_dependencies(pointcloud_processing hdf5_install)
