initial training commit

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ segmentation/napari_trainer/test_1638_debug.png
 /vesuvius/vesuvius.egg-info
 /vesuvius/vesuvius.egg-info
 vesuvius/vesuvius.egg-info/PKG-INFO
+/vesuvius/vesuvius.egg-info
