--- a/vesuvius/models/configuration/single_task_config.yaml
+++ b/vesuvius/models/configuration/single_task_config.yaml
@@ -10,20 +10,8 @@ dataset_config:
   min_labeled_ratio: 0.01
   min_bbox_percent: 0.01
   skip_patch_validation: false
-  target_value:
-    surfaces:
-      mapping:
-        1: 1 
   targets:
     surfaces:
-      out_channels: 2
       activation: "none"
       weight: 1
-      loss_fn: "DC_and_CE_loss"
-
-inference_config:
-  targets:
-    - ink:
-        channels: 2
-        activation: "sigmoid"
-        weight: 1
+      loss_fn: "BCEDiceLoss"
