update inference.py to allow for multi-task outputs

--- a/vesuvius/models/configuration/multi-task_config.yaml
+++ b/vesuvius/models/configuration/multi-task_config.yaml
@@ -16,8 +16,8 @@ dataset_config:
     hz:
       activation: "none"
       weight: 1
-      loss_fn: "BCEDiceLoss"
+      loss_fn: "CEDiceLoss"
     vt:
       activation: "none"
       weight: 1
-      loss_fn: "BCEDiceLoss"
+      loss_fn: "CEDiceLoss"
