some training fixes
move zero grad to top of train loop

modify some defaults for schedulers

remove some unused files

--- a/vesuvius/models/configuration/multi-task_config.yaml
+++ b/vesuvius/models/configuration/multi-task_config.yaml
@@ -2,7 +2,9 @@ tr_setup:
   model_name: MultiTask_Fiber_Segmentation
 
 tr_config:
-  patch_size: [128, 128, 128]
+  patch_size: [192, 192, 192]
+  max_steps_per_epoch: 5000
+  batch_size: 2
 
 dataset_config:
   binarize_labels: true
