--- a/vesuvius/models/configuration/single_task_config.yaml
+++ b/vesuvius/models/configuration/single_task_config.yaml
@@ -2,16 +2,15 @@ tr_setup:
   model_name: SingleTask_Binary_Segmentation
 
 tr_config:
-  patch_size: [128, 128]
+  patch_size: [64, 64, 64]
 
 dataset_config:
-  binarize_labels: true
-  target_value: 1  # Binary task
-  min_labeled_ratio: 0.01
-  min_bbox_percent: 0.01
-  skip_patch_validation: false
+  binarize_labels: false
+  min_labeled_ratio: 0 
+  min_bbox_percent: 0 
+  skip_patch_validation: true
   targets:
-    surfaces:
+    eigenvalues:
       activation: "none"
       weight: 1
-      loss_fn: "CEDiceLoss"
+      out_channels: 3
