--- a/.github/workflows/test-vesuvius-install.yml
+++ b/.github/workflows/test-vesuvius-install.yml
@@ -1,4 +1,4 @@
-name: Test Local Installation
+name: Test Vesuvius Installation
 
 on:
   push:
@@ -6,12 +6,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  test-local-install:
+  test-vesuvius-install:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12', '3.13']
+        python-version: ['3.10', '3.12', '3.13']
         
     steps:
     - name: Checkout code
@@ -22,12 +22,12 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     
-    - name: Install package locally
+    - name: Install vesuvius package locally
       working-directory: vesuvius
       run: |
         python -m pip install --upgrade pip
         pip install -e .
     
-    - name: Test import
+    - name: Test vesuvius import
       run: |
         python -c "import vesuvius; print('✅ vesuvius imported successfully')" 
