--- a/.github/workflows/test-vesuvius.yml
+++ b/.github/workflows/test-vesuvius.yml
@@ -4,9 +4,11 @@ on:
   push:
     paths:
       - 'vesuvius/**'
+      - '.github/workflows/test-vesuvius.yml'
   pull_request:
     paths:
       - 'vesuvius/**'
+      - '.github/workflows/test-vesuvius.yml'
   workflow_dispatch:
 
 jobs:
@@ -15,7 +17,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.10', '3.12']
+        python-version: ['3.12']
         
     steps:
     - name: Checkout code
